<resources>
    <string name="app_name">GithubClient</string>

    <string name="counter_one">Счетчик 1</string>
    <string name="counter_two">Счетчик 2</string>
    <string name="counter_three">Счетчик 3</string>
    <string name="startCount">0</string>
    <string name="username_text">User Name</string>
    <string name="repo_name">Repo name</string>
    <string name="repo_item_name">Repo name</string>
    <string name="language">language -</string>
    <string name="forks_qty">forks qty -</string>
    <string name="watchers_qty">watchers qty -</string>
    <string name="empty_text">empty</string>
    <string name="follower_name">Follower name</string>
    <string name="follover_name">Name:</string>
    <string name="follower_id">ID:</string>
    <string name="follower_id_text">(id)</string>
    <string name="repos_text">repos</string>
    <string name="followers_text">followers</string>
</resources>