<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_top"
    android:orientation="vertical">


    <TextView
        android:id="@+id/repo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/padding"
        android:text="@string/repo_item_name"
        android:textSize="@dimen/repo_name_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textSize="@dimen/repo_details_text_size"
            android:padding="@dimen/repo_details_padding"/>

        <TextView
            android:id="@+id/language_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/empty_text"
            android:textSize="@dimen/repo_details_text_size"
            android:padding="@dimen/repo_details_padding"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watchers_qty"
            android:textSize="@dimen/repo_details_text_size"
            android:padding="@dimen/repo_details_padding"/>

        <TextView
            android:id="@+id/watchers_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/empty_text"
            android:textSize="@dimen/repo_details_text_size"
            android:padding="@dimen/repo_details_padding"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forks_qty"
            android:textSize="@dimen/repo_details_text_size"
            android:padding="@dimen/repo_details_padding"/>

        <TextView
            android:id="@+id/forks_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/empty_text"
            android:textSize="@dimen/repo_details_text_size"
            android:padding="@dimen/repo_details_padding"/>
    </LinearLayout>

</LinearLayout>