<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/margin_top"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/avatar_iv"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        android:layout_width="@dimen/user_iv_size"
        android:layout_height="@dimen/user_iv_size"
        android:layout_margin="@dimen/margin"
/>

    <TextView
        android:id="@+id/user_login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_text"
        android:textSize="@dimen/user_name_text"
        android:layout_margin="@dimen/margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin"
        android:layout_gravity="end"
        >

        <TextView
            android:id="@+id/repos_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repos_text"
            android:textSize="@dimen/user_buttons_tv_size"
            android:layout_gravity="end"/>

        <TextView
            android:id="@+id/followers_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers_text"
            android:textSize="@dimen/user_buttons_tv_size"
            android:layout_gravity="end"/>
    </LinearLayout>

</LinearLayout>