<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_top"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/follower_avatar_iv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/repo_details_padding"
            android:text="@string/follover_name"
            android:textSize="@dimen/repo_details_text_size" />

        <TextView
            android:id="@+id/follower_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/repo_details_padding"
            android:text="@string/empty_text"
            android:textSize="@dimen/repo_details_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/repo_details_padding"
            android:text="@string/follower_id"
            android:textSize="@dimen/repo_details_text_size" />

        <TextView
            android:id="@+id/follower_id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/repo_details_padding"
            android:text="@string/empty_text"
            android:textSize="@dimen/repo_details_text_size" />
    </LinearLayout>

</LinearLayout>